Layout and blocked field fixes

--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -70,6 +70,10 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item[\textbf{\nth{13}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
 
+\end{multicols*}
+
+\begin{multicols}{2}
+
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item \textbf{Sanctuary:} Gain a \svg{morale_positive} token and draw 1 Card. \textit{Visitable once per Faction}.
@@ -80,11 +84,8 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item Players do not have to pay \svg{gold} after losing a Combat against another player.
 \end{itemize}
 
-\vspace*{\fill}
-
-\end{multicols*}
+\end{multicols}
 
 \begin{tikzpicture}[overlay, remember picture]
-  \node at (9, -4.8) {\includegraphics[width=0.8\linewidth]{\maps/astral_run.png}};
-  \node at (9, -12) {\footnotesize{\textbf{\MakeUppercase{SCENARIO MAP LAYOUT}}}};
+  \node[yshift=-8em] at (current page.center) {\includegraphics[width=0.9\linewidth]{\maps/astral_run.png}};
 \end{tikzpicture}
