--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -85,12 +85,13 @@ The player with the most Victory Points (VP) wins(see Tournament Book). Players 
 \end{itemize}
 
 \begin{center}
-  \vfill
+  \vspace*{\fill}
   \includegraphics[width=1.0\linewidth]{\maps/shattered_alliance-6p.png}
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
-  \vfill
+  \vspace*{\fill}
   \includegraphics[width=1.1\linewidth]{\maps/shattered_alliance_alt-6p.png}
-  \captionof{figure}{\textbf{ALTERNATE MAP LAYOUT}}
+  \captionof{figure}{\textbf{ALTERNATIVE MAP LAYOUT}}
+  \vspace*{\fill}
 \end{center}
 
 \end{multicols*}
