--- a/translations/the_fractured_kingdoms.tex/the_fractured_kingdoms.tex.pot
+++ b/translations/the_fractured_kingdoms.tex/the_fractured_kingdoms.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-04-07 13:28+0200\n"
+"POT-Creation-Date: 2025-04-16 12:03+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -272,7 +272,7 @@ msgid ""
 "  \\newcommand{\\blocked}[3]{%\n"
 "    % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle\n"
 "    \\begin{scope}[shift={(#1,#2)}, rotate=#3]\n"
-"      \\draw[draw=darkyellow, thick, pattern=north east lines, pattern color=darkyellow]\n"
+"      \\draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=0.5]\n"
 "        (0:0.56cm) -- (60:0.56cm) -- (120:0.56cm) --\n"
 "        (180:0.56cm) -- (240:0.56cm) -- (300:0.56cm) -- cycle;\n"
 "    \\end{scope}\n"
