Better handling of blocked field on monochrome

--- a/translations/the_fractured_kingdoms.tex/pl.po
+++ b/translations/the_fractured_kingdoms.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-04-16 12:03+0000\n"
+"POT-Creation-Date: 2025-04-16 16:46+0200\n"
 "PO-Revision-Date: 2025-03-29 21:01+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -358,7 +358,7 @@ msgid ""
 "  \\newcommand{\\blocked}[3]{%\n"
 "    % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle\n"
 "    \\begin{scope}[shift={(#1,#2)}, rotate=#3]\n"
-"      \\draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=0.5]\n"
+"      \\draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=\\iftoggle{noartbackground}{0.9}{0.5}]\n"
 "        (0:0.56cm) -- (60:0.56cm) -- (120:0.56cm) --\n"
 "        (180:0.56cm) -- (240:0.56cm) -- (300:0.56cm) -- cycle;\n"
 "    \\end{scope}\n"
@@ -368,7 +368,7 @@ msgstr ""
 "  \\newcommand{\\blocked}[3]{%\n"
 "    % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle\n"
 "    \\begin{scope}[shift={(#1,#2)}, rotate=#3]\n"
-"      \\draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=0.5]\n"
+"      \\draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=\\iftoggle{noartbackground}{0.9}{0.5}]\n"
 "        (0:0.56cm) -- (60:0.56cm) -- (120:0.56cm) --\n"
 "        (180:0.56cm) -- (240:0.56cm) -- (300:0.56cm) -- cycle;\n"
 "    \\end{scope}\n"
