--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -92,7 +92,7 @@ Victory Points are counted in accordance to the Tournament book. Additionally, y
   \newcommand{\blocked}[3]{%
     % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle
     \begin{scope}[shift={(#1,#2)}, rotate=#3]
-      \draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=0.5]
+      \draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=\iftoggle{noartbackground}{0.9}{0.5}]
         (0:0.56cm) -- (60:0.56cm) -- (120:0.56cm) --
         (180:0.56cm) -- (240:0.56cm) -- (300:0.56cm) -- cycle;
     \end{scope}
