--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -97,7 +97,7 @@ VPs for:
   \newcommand{\blocked}[3]{%
     % Parameters: #1 = x-coordinate, #2 = y-coordinate, #3 = rotation angle
     \begin{scope}[shift={(#1,#2)}, rotate=#3]
-      \draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=0.5]
+      \draw[draw=yellow!40!white!90!brown, line width=1.4pt, draw opacity=0.9, fill=yellow!50!white!80!brown, fill opacity=\iftoggle{noartbackground}{0.9}{0.5}]
         (0:0.44cm) -- (60:0.44cm) -- (120:0.44cm) --
         (180:0.44cm) -- (240:0.44cm) -- (300:0.44cm) -- cycle;
     \end{scope}
