--- a/metadata.tex
+++ b/metadata.tex
@@ -153,6 +153,7 @@
 \definecolor{camel}{rgb}{0.76, 0.6, 0.42}
 \definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
 \definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
+\definecolor{darkyellow}{rgb}{204, 154, 0}
 \definecolor{deepskyblue}{rgb}{0.0, 0.75, 1.0}
 \definecolor{goldenbrown}{rgb}{0.6, 0.4, 0.08}
 
