--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -34,10 +34,10 @@ This Scenario plays out over 13 Rounds
 Take the following Map Tiles ($P$ stands for the number of players) and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
-  \item P × Starting (I) Map Tile
-  \item 3P × Far (II-III) Map Tiles - one per player must include a Settlement, and one per player must include a Trading Post
-  \item 2P × Near (IV-V) Map Tile
-  \item P × Center (VI-VII) Map Tiles (C5 is treated as a Settlement)
+  \item $P$ × Starting (I) Map Tile
+  \item 3$P$ × Far (II-III) Map Tiles
+  \item 2$P$ × Near (IV-V) Map Tiles
+  \item $P$ × Center (VI-VII) Map Tile (C5 is treated as a Settlement)
   \item 1 × Center (VI-VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
