--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -81,7 +81,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item Remove ``View Earth'' from the Spell Deck.
   \item Remove ``Unexpected Reinforcements'' from the Astrologers Proclaim Deck.
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
-  \item When a Secondary Hero is gained, that Hero gains +1 \svgeven{movement} for that Round.
+  \item When a Secondary Hero is recruited, that Hero gains +1 \svgeven{movement} for that Round.
   \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
   \item Sanctuary: \textbf{once per Faction}, gain a \svg{morale_positive} token and draw 1 Card.
   \item Obelisk: \textbf{once per Faction}, (per Obelisk) roll one \svg{resource} and draw one Card.
