--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 16 Rounds
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 1 × Pack \bronze\ Units of the player's choosing
+  \item A Pack \bronze\ Units of the player's choosing
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -45,7 +45,7 @@ The game ends at the end of the Round when any of these conditions are met:
 
 \begin{itemize}
   \item One player has defeated each other player's Main Heroes once - \textit{That player wins the game immediately.}
-  \item One player has control of the Center VII Field 3 consecutive Rounds- \textit{That player wins the game immediately.}
+  \item One player controls the Center VII Field for 3 consecutive Rounds- \textit{That player wins the game immediately.}
   \item At the end of Round 16.
 \end{itemize}
 
@@ -64,8 +64,9 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 \begin{itemize}
   \item[\textbf{\nth{1}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
   \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes.
+  \item[\textbf{End}] \textbf{of \nth{6} Round:} Player(s) whose Main Hero has the least \svg{experience}, Search (2) \svg{artifact}.
   \item[\textbf{\nth{9}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero has the least \svg{experience} roll 2 \svg{resource}.
+  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
   \item[\textbf{\nth{12}}] \textbf{Round:} Remove all Black Cubes.
   \item[\textbf{\nth{13}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
@@ -78,8 +79,9 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 \begin{itemize}
   \item \textbf{Sanctuary:} Gain a \svg{morale_positive} token and draw 1 Card. \textit{Visitable once per Faction}.
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Roll one \svg{resource} and draw one Card. \textit{Visitable once per Faction}.
-  \item Blocked Field adjacent to Obelisk is a two-way Astral Gate and becomes active after visiting the Obelisk.
-  \item Astral Gates cannot be entered from a different Map Tile. When entering an Astral Gate, that Hero is teleported to the mirrored Astral Gate on the Map and arrives on an adjacent Field.
+  \item Each blocked field adjacent to an Obelisk becomes a two-way Astral Gate, which only becomes active after visiting that Obelisk.
+  \item An Astral Gate cannot be entered from a different Map Tile. When entering an Astral Gate, the Hero is teleported to the mirrored Astral Gate on the Map and arrives on an adjacent Field.
+  \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
   \item Players do not have to pay \svg{gold} after losing a Combat against another player.
 \end{itemize}
