--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -20,8 +20,8 @@ This Scenario plays out over 13 Rounds
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 1 × Few \bronze\ Units of the highest recruitment cost
-  \item 1 × Pack \bronze\ Units of the lowest recruitment cost
+  \item A Few \bronze\ Units of the highest recruitment cost
+  \item A Pack \bronze\ Units of the lowest recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -34,10 +34,10 @@ This Scenario plays out over 13 Rounds
 Take the following Map Tiles ($P$ stands for the number of players) and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
-  \item $P$ × Starting (I) Map Tile
-  \item 3$P$ × Far (II-III) Map Tiles
-  \item 2$P$ × Near (IV-V) Map Tiles
-  \item $P$ × Center (VI-VII) Map Tile (C5 is treated as a Settlement)
+  \item P × Starting (I) Map Tile
+  \item 3P × Far (II-III) Map Tiles
+  \item 2P × Near (IV-V) Map Tiles
+  \item P × Center (VI-VII) Map Tile (C5 is treated as a Settlement)
   \item 1 × Center (VI-VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
