--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -19,7 +19,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item Few of \silver\ with the lowest Recruitment cost.
+  \item A Few of \silver\ with the lowest Recruitment cost.
   \item 1 random Neutral \bronze\ Unit.
 \end{itemize}
 
@@ -41,7 +41,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends at the end of Round 8.
+The game ends after Round 8.
 
 \subsection*{\MakeUppercase{Victory Points}}
 The player with the most Victory Points (VP) wins (see Tournament Book). Players also gain:
@@ -68,7 +68,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item The blocked Field on the Center Map Tile is a Magic Spring and does not count as blocked.
   \item All Fields on Center Map Tile are visitable once per Faction.
   \item Players do not lose gold for losing or retreating from any Combat.
-  \item \textbf{Sanctuary:} Empower a Knowledge Statistic Card \textit{OR} gain +1 \svg{morale_positive}. \textit{Visitable once per Faction.}
+  \item \textbf{Sanctuary:} Empower a Knowledge Statistic Card \textit{or} gain +1 \svg{morale_positive}. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Draw 1 Card. \textit{Visitable once per Faction.}
   \item \textit{Optional:} At the beginning of each Round, roll two Attack Dice separately and apply the effect from the table below.
 \end{itemize}
@@ -101,8 +101,8 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \end{tabularx}
 }
 \begin{itemize}
-  \item After winning a Neutral Combat, you may sacrifice 3 \bronze\ Units to gain 1 \silver\ Unit you defeated.
-  \item At the start of next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck AND Search (2) the \silver\ Neutral Deck.
+  \item After winning a Neutral Combat, you may sacrifice 3 \bronze\ Units to gain 1 \silver\ Unit you~defeated.
+  \item At the start of the next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck \textit{and} Search (2) the \silver\ Neutral Deck.
 \end{itemize}
 
 \begin{center}
