--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -79,7 +79,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 \begin{itemize}
   \item \textbf{Sanctuary:} Gain a \svg{morale_positive} token and draw 1 Card. \textit{Visitable once per Faction}.
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Roll one \svg{resource} and draw one Card. \textit{Visitable once per Faction}.
-  \item Each blocked field adjacent to an Obelisk becomes a two-way Astral Gate, which only becomes active after visiting that Obelisk.
+  \item Each blocked Field adjacent to an Obelisk becomes a two-way Astral Gate, which only becomes active after visiting that Obelisk.
   \item An Astral Gate cannot be entered from a different Map Tile. When entering an Astral Gate, the Hero is teleported to the mirrored Astral Gate on the Map and arrives on an adjacent Field.
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
   \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
