--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -64,7 +64,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item[\textbf{\nth{9}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
   \item[\textbf{\nth{10}}] \textbf{Round:} All players may recruit a Secondary Hero for free.
   \item[\textbf{\nth{11}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{\nth{12}}] \textbf{Round:} Each player may recruit one \silver\ Neutral unit from the closest player's faction for half its recruitment cost.
+  \item[\textbf{\nth{12}}] \textbf{Round:} Each player may recruit one \silver\ Neutral Unit from the closest player's Faction for half its recruitment cost.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
