--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -64,9 +64,9 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 \begin{itemize}
   \item[\textbf{\nth{1}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
   \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{End}] \textbf{of \nth{6} Round:} Player(s) whose Main Hero has the least \svg{experience}, Search (2) \svg{artifact}.
+  \item[\textbf{\nth{6}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience}, Search (2) \svg{artifact}.
   \item[\textbf{\nth{9}}] \textbf{Round:} Remove all Black Cubes.
-  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
+  \item[\textbf{\nth{10}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
   \item[\textbf{\nth{12}}] \textbf{Round:} Remove all Black Cubes.
   \item[\textbf{\nth{13}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
