--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -77,7 +77,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Sanctuary:} Gain a \svg{morale_positive} token and draw 1 Card. \textit{Visitable once per Faction}.
+  \item \textbf{Sanctuary:} Gain 1 \svg{morale_positive} token and draw 1 Card from your Deck. \textit{Visitable once per Faction}.
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Roll one \svg{resource} and draw one Card. \textit{Visitable once per Faction}.
   \item Each blocked Field adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
   \item An Astral Gate cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to another random activated Astral Gate on the Map and arrive on an adjacent Field.
