--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} LAAMAKALA
 
-\textit{Every move could be your last. Every gate a gamble. Glory belongs to the bold}
+\textit{Every move could be your last. Every gate a gamble. Glory belongs to the bold.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 16 Rounds
