--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -8,7 +8,7 @@
 \textit{Every move could be your last. Every gate a gamble. Glory belongs to the bold.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 16 Rounds
+This Scenario plays out over 16 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 6
