--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -20,8 +20,8 @@ This Scenario plays out over 13 Rounds
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Few \bronze\ Units of the highest recruitment cost
-  \item A Pack \bronze\ Units of the lowest recruitment cost
+  \item A Few chosen \bronze\ Units
+  \item A Pack of cheapest \bronze\ Units
 \end{itemize}
 
 \textbf{Town Buildings:}
