--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -54,7 +54,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 In addition to the Tournament Book's ``Scoring Victory Points'' section, players get VPs for:
 
 \begin{itemize}
-  \item 5 VP for first player Flagging Center VII Field.
+  \item 5 VP for the first player to flag the Center VII Field.
   \item 1 VP for every flagged Mine and Settlement on Near and Center Tiles.
   \item Removed Artifacts also count towards VPs.
 \end{itemize}
