--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -19,8 +19,8 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few of \silver\ with the lowest Recruitment cost.
-  \item 1 random Neutral \bronze\ Unit.
+  \item A Few of cheapest \silver\ Units
+  \item 1 random Neutral \bronze\ Unit
 \end{itemize}
 
 \textbf{Town Buildings:}
