--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -21,7 +21,7 @@ This Scenario plays out over 6 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Few of \silver\ with the lowest Recruitment cost.
+  \item A Few of cheapest \silver\ Units
 \end{itemize}
 
 \textbf{Town Buildings:}
