--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -102,7 +102,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 }
 \begin{itemize}
   \item After winning a Neutral Combat, you may sacrifice 3 \bronze\ Units to gain 1 \silver\ Unit you~defeated.
-  \item At the start of the next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck \textit{and} Search (2) the \silver\ Neutral Deck.
+  \item At the start of the next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck, \textit{and} Search (2) the \silver\ Neutral Deck.
 \end{itemize}
 
 \begin{center}
