--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -67,7 +67,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item Citadel cannot be built on Round 1.
   \item The blocked Field on the Center Map Tile is a Magic Spring and does not count as blocked.
   \item All Fields on Center Map Tile are visitable once per Faction.
-  \item Players do not lose gold for losing or retreating from any Combat.
+  \item Players do not lose \svg{gold} for losing or retreating from any Combat.
   \item \textbf{Sanctuary:} Empower a Knowledge Statistic Card \textit{or} gain +1 \svg{morale_positive}. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Draw 1 Card. \textit{Visitable once per Faction.}
   \item \textit{Optional:} At the beginning of each Round, roll two Attack Dice separately and apply the effect from the table below.
