--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -66,7 +66,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item \azure\ Units cannot be recruited at any point of the game.
   \item Citadel cannot be built on Round 1.
   \item The blocked Field on the Center Map Tile is a Magic Spring and does not count as blocked.
-  \item All Fields on Center Map Tile are visitable once per Faction.
+  \item All Fields on the Center Map Tile are visitable once per Faction.
   \item Players do not lose \svg{gold} for losing or retreating from any Combat.
   \item \textbf{Sanctuary:} Empower a Knowledge Statistic Card \textit{or} gain \svg{morale_positive}. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Draw 1 Card. \textit{Visitable once per Faction.}
