--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -54,10 +54,10 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 \subsection*{\MakeUppercase{Timed Events}}
 
 \begin{itemize}
-  \item \textbf{\nth{1} Round:} all Heroes gain +1 \svgeven{movement}.
+  \item \textbf{\nth{1} Round:} All Heroes gain +1 \svgeven{movement}.
   \item \textbf{\nth{2} Round:} Players may gain either 10 \svg{gold}, 4 \svg{building_materials} or 2 \svg{valuables}.
-  \item \textbf{\nth{5} Round:} Remove all black Cubes.
-  \item \textbf{\nth{7} Round:} all Heroes gain +1 \svgeven{movement}.
+  \item \textbf{\nth{5} Round:} Remove all Black Cubes.
+  \item \textbf{\nth{7} Round:} All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
