--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -40,11 +40,8 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 1 × Center Map Tile. The center Field is ``The Hill''
 \end{itemize}
 
-\subsection*{\MakeUppercase{Victory Conditions}}
-The game ends after Round 8.
-
 \subsection*{\MakeUppercase{Victory Points}}
-The player with the most Victory Points (VP) wins (see Tournament Book). Players also gain:
+After Round 8, the player with the most Victory Points (VP) wins (see Tournament Book). Players also gain:
 \begin{itemize}
   \item 5 VP for the first player flagging ``The Hill''
   \item 2 VP at the end of every Round for the player who controls ``The Hill''
