--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -41,7 +41,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
-The Player with the most Victory Points (VP) wins. Players get
+After Round 6, the Player with the most Victory Points (VP) wins. Players get
 VPs for:
 \begin{itemize}
   \item Round number - 1 VP for starting your turn on ``The Hill''
