--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{https://discord.com/channels/1275490124301467799/1284428969369665631}{KABLAMIO's Discord}
 
-\textit{Win (and lose) PvP fights and hold the Hill.}
+\textit{All eyes turn to the Hill — where legends rise and empires fall. Fight, claim it, and prove you’re worthy to rule.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 6 Rounds.
