--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -55,7 +55,7 @@ Players get VPs for:
 \begin{itemize}
   \item \textbf{\nth{2} Round:} Gain Secondary Hero for free.
   \item \textbf{\nth{3} Round:} Gain Citadel for free. If you had it, gain 1 VP.
-  \item \textbf{\nth{4} Round:} Gain \silver\ dwelling for free. If you had it: gain 2 VP.
+  \item \textbf{\nth{4} Round:} Gain \silver\ dwelling for free. If you already had it, gain 2 VP.
   \item \textbf{\nth{5} Round:} Gain \golden\ dwelling for free. If you had it: gain 3 VP.
 \end{itemize}
 
