--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -37,10 +37,9 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item P × Far (II-III) Map Tiles
   \item P × Near (IV-V) Map Tiles
   \item Center Map Tile (C1 or C3)
-  \item Custom Center Map Tile
+  \item Custom Center Map Tile (See Map Layout)
 \end{itemize}
 
-\subsection*{\MakeUppercase{Victory Points}}
 \subsection*{\MakeUppercase{Victory Points}}
 After Round 6, the player with the most Victory Points (VP) wins.
 Players get VPs for:
@@ -61,7 +60,7 @@ Players get VPs for:
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Every Round after Round 1 is a Resource Round.
+  \item Players also gain income on even-numbered Rounds.
   \item Players can't attack their opponent's starting Town.
   \item Players can only attack another player once each turn.
   \item Players do not lose gold for losing or retreating from any Combat.
