--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -81,7 +81,7 @@ Players get VPs for:
   \item Additional Trading Post actions:
   \begin{itemize}
     \item You may Search (2) \svg{artifact} and \svg{hand} 6 \svg{gold} for minor, 8 for \svg{gold} or 11 for \svg{gold} for Relic.
-    \item For 2×\textbf{x} +2  \svg{gold}, you may remove \textbf{any} Card from your hand or discard (\textbf{x} is the amount of times you have used this mode).
+    \item For $2×X+2$ \svg{gold}, you may remove \textbf{any} Card from your hand or discard ($X$is the amount of times you have used this mode).
   \end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
   \item In a 2-Player game when a Player gains \textbf{x} VP for controlling the Hill. That Player also has to distribute \textbf{x} \svg{damage-red} to their Units.
