--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -77,7 +77,7 @@ Players get VPs for:
 \subsection*{\MakeUppercase{Optional Rules}}
 \begin{itemize}
   \item After winning a Neutral Combat, you may Recruit one of the defeated Neutral Units for half the recruitment \svg{gold} rounded up (you may use only one Neutral Unit Recruited this way in a Combat).  % no-check-caps
-  \item When a Unit with \svg{defense} is attacked but suffers no \svg{damage-red}, it gains a \href{https://archon-studio.com/files/manuals/homm/HoMM-Stronghold-Mission-Book-Beta_EN.pdf}{Corrosion} token. That token is removed, when that Unit takes damage.
+  \item When a Unit with \svg{defense} is attacked but suffers no \svg{damage-red}, it gains a Corrosion token. That token is removed when that Unit takes damage.
   \item Additional Trading Post actions:
   \begin{itemize}
     \item You may Search (2) \svg{artifact} and \svg{pay_v2} 6 \svg{gold} for minor, 8 \svg{gold} for major, or 11 \svg{gold} for Relic.
