--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -71,7 +71,7 @@ Players get VPs for:
   \item Level VI and VII Combats cannot be skipped.
   \item Level VII Neutral Combat reward: Gain 20 \svg{gold}.
   \item \textbf{Obelisks:} Search (2) \svg{artifact}. \textit{Visitabe once per Faction.}
-  \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svgeven{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, gain 10\svg{gold}, resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
+  \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svgeven{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Optional Rules}}
