--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -69,9 +69,9 @@ Players get VPs for:
   \item After PvP Combat, both Players gain their lost \bronze\ and \silver\ Units back.
   \item Players may \svg{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
-  \item Level VII Neutral Combat reward: Gain 20 \svg{gold}.
+  \item ``The Hill'' Combat reward: 20 \svg{gold}.
   \item \textbf{Obelisks:} Search (2) \svg{artifact}. \textit{Visitabe once per Faction.}
-  \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svgeven{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
+  \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svgeven{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, gain 10 \svg{gold} and resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Optional Rules}}
