--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -65,7 +65,7 @@ Players get VPs for:
   \item Players can only attack another player once each turn.
   \item Players do not lose gold for losing or retreating from any Combat.
   \item Secondary Heroes act as Main Hero.
-  \item After losing a Combat, the defeated Hero is moved to it's starting Town.
+  \item After losing a Combat, the defeated Hero is moved to its starting Town.
   \item After PvP Combat, both Players gain their lost \bronze\ and \silver\ Units back.
   \item Players may \svg{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
