--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -44,7 +44,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 After Round 6, the player with the most Victory Points (VP) wins.
 Players get VPs for:
 \begin{itemize}
-  \item Round number - 1 VP for starting your turn on ``The Hill''
+  \item $X-1$ VPs for starting your turn on ``The Hill'' \textit{Where ($X$ is the number of the current Round.}
   \item 2 VP for winning a Combat against another Player
   \item 1 VP for losing a Combat against another Player
 \end{itemize}
