--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -8,7 +8,7 @@
 \textit{Once united, the great kingdoms of Aldara now stand divided. Betrayal and ambition fuel the conflict — who will forge a new order?}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 14 Rounds
+This Scenario plays out over 14 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 3 or 6P FFA, 2v2v2 alliance.
