--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 14 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Few \svg{bronze} Units of the lowest recruitment cost
+  \item 2 × Few cheapest \svg{bronze} Units
 \end{itemize}
 
 \textbf{Town Buildings:}
