--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -32,9 +32,9 @@ This Scenario plays out over 14 Rounds.
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
-  \item 6 × Starting (I) Map Tile
+  \item 6 × Starting (I) Map Tiles
   \item 3 × Far (II-III) Map Tiles for each player's Map Pool
-  \item 12 × Near (IV-V) Map Tile
+  \item 12 × Near (IV-V) Map Tiles
   \item 3 × Center (VI-VII) Map Tiles
 \end{itemize}
 
