--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -46,7 +46,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 
 \begin{itemize}
   \item 1 VP for losing a Combat against another player
-  \item 1 VP for each Starting Tile Town captured - \textit{once per captured Faction}
+  \item 1 VP for each Starting Town captured - \textit{once per captured Faction}
   \item 1 VP for the Grail Token
   \item 2 VP for winning a Level VII Neutral Combat
   \item 1 VP for every controlled Mine or Settlement on Near and Center Tiles
