--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -57,7 +57,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 
 \begin{itemize}
   \item[\textbf{\nth{1}}] \textbf{Round:} Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
-  \item[\textbf{\nth{2}}] \textbf{Round:} Each player may gain one reward from the Field the closest player to them visits this Round.
+  \item[\textbf{\nth{2}}] \textbf{Round:} Each player may gain one reward from the Field that the closest player to them visits this Round.
   \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes.
   \item[\textbf{\nth{6}}] \textbf{Round:} Secondary Heroes gain +1 \svgeven{movement}.
   \item[\textbf{\nth{8}}] \textbf{Round:} Each player may remove up to 5 Black Cubes from the map.
