--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -61,7 +61,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes.
   \item[\textbf{\nth{6}}] \textbf{Round:} Secondary Heroes gain +1 \svgeven{movement}.
   \item[\textbf{\nth{8}}] \textbf{Round:} Each player may remove up to 5 Black Cubes from the map.
-  \item[\textbf{\nth{9}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
+  \item[\textbf{\nth{9}}] \textbf{Round:} Player(s) whose Main Hero has the least \svg{experience} roll 2 \svg{resource}.
   \item[\textbf{\nth{10}}] \textbf{Round:} All players may recruit a Secondary Hero for free.
   \item[\textbf{\nth{11}}] \textbf{Round:} Remove all Black Cubes.
   \item[\textbf{\nth{12}}] \textbf{Round:} Each player may recruit one \silver\ Neutral Unit from the closest player's Faction for half its recruitment cost.
