--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -81,7 +81,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item Players do not have to pay \svg{gold} after losing a Combat against another player.
   \item A defeated Main Hero may Empower one Statistic Card from their M\&M Deck \textit{and} gain +1 \svg{morale_positive}.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
-  \item Flagging a Neutral Starting Town increases two incomes by 1 space.
+  \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
 \end{itemize}
 
 \begin{center}
