--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -77,7 +77,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item If you start a turn with the Grail Token, gain +1 \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income.
-  \item Level VII Neutral Combats cannot be skipped and grant the player +1 \svg{morale_positive}.
+  \item Level VII Neutral Combats cannot be skipped and grant the player \svg{morale_positive}.
   \item Players do not have to pay \svg{gold} after losing a Combat against another player.
   \item A defeated Main Hero may Empower one Statistic Card from their M\&M Deck \textit{and} gain +1 \svg{morale_positive}.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
